# signal-wm

./: Cargo.toml  README.md  flake.nix  result
.cargo/: config.toml
config/: config.toml
src/: cli.rs  config.rs  main.rs  server.rs
src/server/: builder.rs  winit.rs
src/server/builder/: winit.rs
